# GTestCMake

./: .cproject  .project  CMakeLists.txt
src/: Foo.h
test/: TFoo.cpp
